--- a/templates/visual/style/visual.less
+++ b/templates/visual/style/visual.less
@@ -1,3 +1,9 @@
-.giant{
-    font-size: 100px
+p {
+    font-size: 20px;
+    font-weight: bold;
+    em {
+        background: yellow;
+        padding: 5px;
+        
+    }
 }
